---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $$ } from '@builder.io/qwik';

export const App = component$(() => {
    const foo = useSignal(0);
    const bar = useSignal(0);

    return (
        <Cmp stuff={$$(() => {
            return foo.value + bar.value;
        })}>
        </Cmp>
    );
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrlDEV } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrlDEV(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 84,
    hi: 275,
    displayName: "App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA;;AAEA,OAAO,MAAM,oBAAM;;;;;IAUhB\"}")
============================= app_component_cmp_stuff__qbubpqffxak.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const App_component_Cmp_stuff__QBUbpQffXak = ()=>{
    const [bar, foo] = useLexicalScope();
    return foo.value + bar.value;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";oDAQuB;;IACX,OAAO,IAAI,KAAK,GAAG,IAAI,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_stuff__QBUbpQffXak",
  "entry": null,
  "displayName": "App_component_Cmp_stuff_",
  "hash": "QBUbpQffXak",
  "canonicalFilename": "app_component_cmp_stuff__qbubpqffxak",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$$",
  "captures": true,
  "loc": [
    189,
    248
  ]
}
*/
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { $Qrl } from "@builder.io/qwik";
import { jsxDEV as _jsxDEV } from "@builder.io/qwik/jsx-dev-runtime";
import { qrlDEV } from "@builder.io/qwik";
export const App_component_ckEPmXZlub0 = ()=>{
    const foo = useSignal(0);
    const bar = useSignal(0);
    return /*#__PURE__*/ _jsxDEV(Cmp, {
        stuff: $Qrl(/*#__PURE__*/ qrlDEV(()=>import("./app_component_cmp_stuff__1_xjxvb5gfb0c"), "App_component_Cmp_stuff__1_xjXVb5gfb0c", {
            file: "/user/qwik/src/test.tsx",
            lo: 189,
            hi: 248,
            displayName: "App_component_Cmp_stuff__1"
        }, [
            bar,
            foo
        ]))
    }, "u6_0", false, {
        fileName: "/user/qwik/src/test.tsx",
        lineNumber: 9,
        columnNumber: 9
    }, this);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B,IAAM;IAChC,MAAM,MAAM,UAAU;IACtB,MAAM,MAAM,UAAU;IAEtB,qBACI,QAAC;QAAI,OAAO;;;;;;;;;;;;;;AAKpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    84,
    275
  ]
}
*/
============================= app_component_cmp_stuff__1_xjxvb5gfb0c.js (ENTRY POINT)==

import { useLexicalScope } from "@builder.io/qwik";
export const App_component_Cmp_stuff__1_xjXVb5gfb0c = ()=>{
    const [bar, foo] = useLexicalScope();
    return foo.value + bar.value;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";sDAQuB;;IACX,OAAO,IAAI,KAAK,GAAG,IAAI,KAAK\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_stuff__1_xjXVb5gfb0c",
  "entry": null,
  "displayName": "App_component_Cmp_stuff__1",
  "hash": "xjXVb5gfb0c",
  "canonicalFilename": "app_component_cmp_stuff__1_xjxvb5gfb0c",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$$",
  "captures": true,
  "loc": [
    189,
    248
  ]
}
*/
== DIAGNOSTICS ==

[]
